# labAI

./: .gitignore  README.md
es1/: test0
es1/src/: access_image.cpp  process_image.cpp  utils.h
es1/src/test/: test0.cpp
es2/: README.md  test0  test1
es2/src/: filter_image.cpp  process_image.cpp  resize_image.cpp
es2/src/test/: test1.cpp
es3/: CMakeLists.txt  README.md  clean.sh  test_canny
es3/src/: edge_detection.cpp  utils.cpp  utils.h
es3/src/test/: test2.cpp
es4/: make-panorama  test1  test2  test4
es4/interactive_visualization/: harris  inliers  matches  panorama
es4/src/: harris_image.cpp  panorama_image.cpp
es4/src/test/: test4.cpp
es5/: Introduction_to_colab_and_ML.ipynb  Linear_Regression.ipynb
es6/: Exercise1.ipynb  Exercise2.ipynb  Exercise3.ipynb
es7/: Introduction_to_NeuralNetworks_using_PyTorch.ipynb  Introduction_to_PyTorch.ipynb  our_model.tar
es7/runs/Jun01_19-24-38_pop-os/: events.out.tfevents.1717262678.pop-os.51694.5
es7/runs/Jun01_19-25-06_pop-os/: events.out.tfevents.1717262706.pop-os.52638.0
es7/runs/Jun01_19-25-56_pop-os/: events.out.tfevents.1717262756.pop-os.52638.1
es7/runs/Jun01_19-26-43_pop-os/: events.out.tfevents.1717262803.pop-os.52638.2
es7/runs/Jun01_19-27-03_pop-os/: events.out.tfevents.1717262823.pop-os.52638.3
es7/runs/Jun01_19-37-45_pop-os/: events.out.tfevents.1717263465.pop-os.52638.4
es7/runs/Jun01_19-44-09_pop-os/: events.out.tfevents.1717263849.pop-os.52638.5
es7/runs/Jun01_19-44-57_pop-os/: events.out.tfevents.1717263897.pop-os.54011.0
(+9 files in other folders)
